0.2.0 (unreleased)
=====
* Added a scale option to matrix.

0.1.0 (2007-10-12)
=====
* Initial release.