@@ -1,5 +1,6 @@
 0.2.0 (unreleased)
 =====
+* Added square operator for typing morphisms in double categories.
 * Added a scale option to matrix.
 
 0.1.0 (2007-10-12)
